Revert "Remove visibility and use the linker for this."
This reverts commit ed7589d185b6c9d305a87039422b08c02df5251f.

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -69,7 +69,9 @@ CLEANFILES =								\
 	exo.c								\
 	expected-abi
 
+if HAVE_GNUC_VISIBILITY
 TESTS =									\
 	abicheck.sh
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
