--- a/configure.in.in
+++ b/configure.in.in
@@ -100,8 +100,10 @@ dnl *** Loopup hardcoded paths we use internally ***
 dnl ************************************************
 AC_PATH_PROG([PATH_MOUNT], [mount], [/bin/mount])
 AC_PATH_PROG([PATH_UMOUNT], [umount], [/bin/umount])
+AC_PATH_PROG([PATH_EJECT], [eject], [/usr/bin/eject])
 AC_SUBST([PATH_MOUNT])
 AC_SUBST([PATH_UMOUNT])
+AC_SUBST([PATH_EJECT])
 
 dnl ***************************************
 dnl *** Check for required Perl modules ***
