--- a/configure.in.in
+++ b/configure.in.in
@@ -12,10 +12,10 @@ dnl ***************************
 m4_define([libexo_verinfo], [5:0:5])
 m4_define([libexo_version_major], [0])
 m4_define([libexo_version_minor], [3])
-m4_define([libexo_version_micro], [105])
+m4_define([libexo_version_micro], [106])
 m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [@REVISION@])
-m4_define([libexo_version_tag], [git])
+m4_define([libexo_version_tag], [])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [git], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
