Add desktop files for exo-open types.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -84,4 +84,7 @@ exo-mount/main.c
 exo-mount-notify/main.c
 
 exo-open/main.c
-
+exo-open/exo-file-manager.desktop.in
+exo-open/exo-mail-reader.desktop.in
+exo-open/exo-terminal-emulator.desktop.in
+exo-open/exo-web-browser.desktop.i
