Fix typo in previous commit.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -87,4 +87,4 @@ exo-open/main.c
 exo-open/exo-file-manager.desktop.in
 exo-open/exo-mail-reader.desktop.in
 exo-open/exo-terminal-emulator.desktop.in
-exo-open/exo-web-browser.desktop.i
+exo-open/exo-web-browser.desktop.in
