--- a/configure.in.in
+++ b/configure.in.in
@@ -280,29 +280,32 @@ if test x"$enable_python" != x"no"; then
 fi
 AM_CONDITIONAL([HAVE_PYTHON], [test x"$have_python" = x"yes"])
 
-dnl **************************
-dnl *** Check for xsltproc ***
-dnl **************************
-AC_ARG_ENABLE([xsltproc], [AC_HELP_STRING([--enable-xsltproc], [Use xsltproc to build documentation [default=no]])],, [enable_xsltproc=no])
-if test x"$enable_xsltproc" = x"yes"; then
-  AC_PATH_PROG([XSLTPROC], [xsltproc], [no])
-  if test x"$XSLTPROC" = x"no"; then
-    enable_xsltproc=no
-  fi
-fi
-AM_CONDITIONAL([ENABLE_XSLTPROC], [test x"$enable_xsltproc" = x"yes"])
+dnl ***************************************************
+dnl *** Check if we need to build the documentation ***
+dnl ***************************************************
+AC_ARG_ENABLE([gen-doc], [AC_HELP_STRING([--enable-gen-doc], 
+              [Generate HTML documentation (requires xsltproc, xml2po and xmllint) [default=no]])],, [enable_gen_doc=no])
+if test x"$enable_gen_doc" = x"yes"; then
+    AC_PATH_PROG([XSLTPROC], [xsltproc], [no])
+    if test x"$XSLTPROC" = x"no"; then
+        enable_gen_doc=no
+    fi
 
-dnl ************************
-dnl *** Check for xml2po ***
-dnl ************************
-AC_ARG_ENABLE([xml2po], [AC_HELP_STRING([--enable-xml2po], [Use xml2po to translate documentation @<:@default=no@:>@])],, [enable_xml2po=no])
-if test x"$enable_xml2po" = x"yes"; then
-  AC_PATH_PROG([XML2PO], [xml2po], [no])
-  if test x"$XML2PO" = x"no"; then
-    enable_xml2po=no
-  fi
+    AC_PATH_PROG([XML2PO], [xml2po], [no])
+    if test x"$XML2PO" = x"no"; then
+        enable_gen_doc=no
+    fi
+
+    AC_PATH_PROG([XMLLINT], [xmllint], [no])
+    if test x"$XML2PO" = x"no"; then
+        enable_gen_doc=no
+    fi
+
+    if test x"$enable_gen_doc" = x"no"; then
+        AC_MSG_ERROR([Compiling with --enable-gen-doc but one of xml2po, xsltproc or xmllint not found.])
+    fi
 fi
-AM_CONDITIONAL([ENABLE_XML2PO], [test x"$enable_xml2po" = x"yes"])
+AM_CONDITIONAL([GENERATE_DOCUMENTATION], [test x"$enable_gen_doc" = x"yes"])
 
 dnl ***********************************
 dnl *** Check for debugging support ***
@@ -358,36 +361,9 @@ AC_OUTPUT([
 Makefile
 docs/Makefile
 docs/manual/Makefile
-docs/manual/C/Makefile
-docs/manual/C/exo-preferred-applications.xml
-docs/manual/C/images/Makefile
-docs/manual/da/Makefile
-docs/manual/da/exo-preferred-applications.xml
-docs/manual/da/images/Makefile
-docs/manual/es/Makefile
-docs/manual/es/exo-preferred-applications.xml
-docs/manual/es/images/Makefile
-docs/manual/fr/Makefile
-docs/manual/fr/exo-preferred-applications.xml
-docs/manual/fr/images/Makefile
-docs/manual/gl/Makefile
-docs/manual/gl/exo-preferred-applications.xml
-docs/manual/gl/images/Makefile
-docs/manual/id/Makefile
-docs/manual/id/exo-preferred-applications.xml
-docs/manual/id/images/Makefile
-docs/manual/it/Makefile
-docs/manual/it/exo-preferred-applications.xml
-docs/manual/it/images/Makefile
-docs/manual/ja/Makefile
-docs/manual/ja/exo-preferred-applications.xml
-docs/manual/ja/images/Makefile
-docs/manual/pt_BR/Makefile
-docs/manual/pt_BR/exo-preferred-applications.xml
-docs/manual/pt_BR/images/Makefile
-docs/manual/tr/Makefile
-docs/manual/tr/exo-preferred-applications.xml
-docs/manual/tr/images/Makefile
+docs/manual/images/Makefile
+docs/manual/images/es/Makefile
+docs/manual/images/ja/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo.spec
@@ -440,6 +416,13 @@ else
 echo "* GIO-Unix features:    no"
 fi
 echo "* Debug Support:        $enable_debug"
+if test x"$enable_gen_doc" = x"yes"; then
+echo "* Documentation:        yes (generate)"
+elif test -d "${srcdir}/docs/manual/html"; then
+echo "* Documentation:        yes (in tarball)"
+else
+echo "* Documentation:        no"
+fi
 echo "* GNU Visibility:       $have_gnuc_visibility"
 echo "* Python Support:       $have_python"
 echo
