Move documentation translations to a more suitable place.

--- a/configure.in.in
+++ b/configure.in.in
@@ -364,6 +364,7 @@ docs/manual/Makefile
 docs/manual/images/Makefile
 docs/manual/images/es/Makefile
 docs/manual/images/ja/Makefile
+docs/manual/po/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
 exo.spec
@@ -386,7 +387,6 @@ icons/24x24/Makefile
 icons/48x48/Makefile
 pixmaps/Makefile
 po/Makefile.in
-po-doc/Makefile
 python/Makefile
 python/examples/Makefile
 tests/Makefile
