--- a/configure.in.in
+++ b/configure.in.in
@@ -94,16 +94,6 @@ AC_PROG_INTLTOOL([0.31], [no-xml])
 AC_PROG_LIBTOOL()
 AC_CHECK_PROGS([PERL], [perl5 perl])
 
-dnl ************************************************
-dnl *** Loopup hardcoded paths we use internally ***
-dnl ************************************************
-AC_PATH_PROG([PATH_MOUNT], [mount], [/bin/mount])
-AC_PATH_PROG([PATH_UMOUNT], [umount], [/bin/umount])
-AC_PATH_PROG([PATH_EJECT], [eject], [/usr/bin/eject])
-AC_SUBST([PATH_MOUNT])
-AC_SUBST([PATH_UMOUNT])
-AC_SUBST([PATH_EJECT])
-
 dnl ***************************************
 dnl *** Check for required Perl modules ***
 dnl ***************************************
@@ -116,18 +106,15 @@ dnl ***************************************
 dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
-AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h fstab.h libintl.h \
-                  locale.h math.h mmintrin.h mntent.h \
-                  paths.h regex.h signal.h stdarg.h string.h sys/mman.h \
-                  sys/mnttab.h sys/mount.h sys/param.h sys/resource.h \
-                  sys/statvfs.h sys/stat.h sys/time.h sys/types.h sys/ucred.h \
-                  sys/wait.h time.h])
+AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h \
+                  locale.h math.h mmintrin.h paths.h regex.h \
+                  signal.h stdarg.h string.h sys/mman.h \
+                  sys/stat.h sys/time.h sys/types.h sys/wait.h time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
 dnl ************************************
 AC_FUNC_MMAP()
-AC_CHECK_FUNCS([getfsstat getmntent getvfsstat regexec setfsent setmntent])
 
 dnl ***************************************
 dnl *** Check for strftime() extensions ***
@@ -187,38 +174,6 @@ dnl *********************
 dnl *** Check for X11 ***
 dnl *********************
 XDT_CHECK_LIBX11_REQUIRE()
-
-dnl **************************************
-dnl *** Check for libnotify (optional) ***
-dnl **************************************
-XDT_CHECK_OPTIONAL_PACKAGE([LIBNOTIFY], [libnotify], [0.4.0], [notifications], [Notifications support], [yes])
-
-dnl ********************************
-dnl *** Check for HAL (optional) ***
-dnl ********************************
-XDT_CHECK_OPTIONAL_PACKAGE([HAL], [hal-storage], [0.5.7], [hal], [HAL support], [yes])
-if test x"$HAL_FOUND" = x"yes"; then
-  dnl # substituted into exo-hal-1.pc
-  HAL_STORAGE_DEPENDENCY="hal-storage"
-
-  dnl # Check if LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL is declared
-  save_CFLAGS="$CFLAGS"
-  CFLAGS="$CFLAGS $HAL_CFLAGS"
-  AC_MSG_CHECKING([whether LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL is declared])
-  AC_COMPILE_IFELSE(AC_LANG_SOURCE(
-  [#include <libhal-storage.h>
-    int main (int argc, char **argv) { return LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL; }
-  ]),
-  [
-    AC_DEFINE([HAVE_LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL], [1], [Define if LIBHAL_DRIVE_CDROM_CAPS_DVDPLUSRWDL present])
-    AC_MSG_RESULT([yes])
-  ],
-  [
-    AC_MSG_RESULT([no])
-  ])
-  CFLAGS="$save_CFLAGS"
-fi
-AC_SUBST([HAL_STORAGE_DEPENDENCY])
 
 dnl *************************
 dnl *** Check for gtk-doc ***
@@ -374,12 +329,8 @@ exo/exo-config.h
 exo-csource/Makefile
 exo-desktop-item-edit/Makefile
 exo-gio-module/Makefile
-exo-hal/Makefile
-exo-hal/exo-hal-1.pc
 exo-helper/Makefile
 exo-helper/helpers/Makefile
-exo-mount/Makefile
-exo-mount-notify/Makefile
 exo-open/Makefile
 exo-support/Makefile
 icons/Makefile
@@ -399,16 +350,6 @@ dnl ***************************
 echo
 echo "Build Configuration:"
 echo
-if test x"$HAL_FOUND" = x"yes"; then
-echo "* HAL support:          yes"
-else
-echo "* HAL support:          no"
-fi
-if test x"$LIBNOTIFY_FOUND" = x"yes"; then
-echo "* Notification support: yes"
-else
-echo "* Notification support: no"
-fi
 if test x"$GIO_UNIX_FOUND" = x"yes"; then
 echo "* GIO-Unix features:    yes"
 echo "  - GIO Module Dir:     $GIOMODULEDIR"
