--- a/exo-helper/Makefile.am
+++ b/exo-helper/Makefile.am
@@ -9,7 +9,9 @@ INCLUDES = 								\
 	-DG_LOG_DOMAIN=\"exo-helper\"					\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
-libexec_PROGRAMS =							\
+exo_helperdir = $(libdir)/xfce4/exo-$(LIBEXO_VERSION_API)
+
+exo_helper_PROGRAMS = \
 	exo-helper-1
 
 exo_helper_built_sources =						\
@@ -51,11 +53,8 @@ bin_SCRIPTS =								\
 	exo-preferred-applications
 
 exo-preferred-applications: Makefile $(srcdir)/exo-preferred-applications.in
-	sed								\
-		-e 's,@libexecdir\@,$(libexecdir),g' 			\
-		-e 's,@LIBEXO_VERSION_API\@,$(LIBEXO_VERSION_API),g'    \
-		< $(srcdir)/exo-preferred-applications.in		\
-		> exo-preferred-applications
+	sed -e 's,@libdir\@,$(libdir),g' 				\
+	    -e 's,@LIBEXO_VERSION_API\@,$(LIBEXO_VERSION_API),g' < $< > $@
 
 desktopdir = $(datadir)/applications
 desktop_in_files =							\
