--- a/exo-helper/exo-preferred-applications.in
+++ b/exo-helper/exo-preferred-applications.in
@@ -8,4 +8,4 @@
 # Browser, Mail Reader and Terminal Emulator.
 #
 
-exec @libexecdir@/exo-helper-@LIBEXO_VERSION_API@ --configure "$@"
+exec @libdir@/xfce4/exo-@LIBEXO_VERSION_API@/exo-helper-@LIBEXO_VERSION_API@ --configure "$@"
