--- a/exo.spec.in
+++ b/exo.spec.in
@@ -64,7 +64,7 @@ fi
 %{_datadir}/pixmaps
 %{_datadir}/xfce4
 %{_libdir}/lib*.so.*
-%{_libexecdir}
+%{_libdir}/xfce4
 %{_mandir}/man1/exo-open.*
 %{_sysconfdir}
 
