--- a/exo-helper/helpers/kmail.desktop.in.in
+++ b/exo-helper/helpers/kmail.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=true
 X-XFCE-Binaries=kmail;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParamter=@libexecdir@/exo-compose-mail-1 kmail %B "mailto:%s";
+X-XFCE-CommandsWithParamter=@HELPERDIR@/exo-compose-mail-1 kmail %B "mailto:%s";
