--- a/exo-helper/helpers/mutt.desktop.in.in
+++ b/exo-helper/helpers/mutt.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=mutt;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=exo-open --launch TerminalEmulator %B;
-X-XFCE-CommandsWithParameter=exo-open --launch TerminalEmulator @libexecdir@/exo-compose-mail-1 mutt %B "mailto:%s";
+X-XFCE-CommandsWithParameter=exo-open --launch TerminalEmulator @HELPERDIR@/exo-compose-mail-1 mutt %B "mailto:%s";
