--- a/exo-helper/helpers/sylpheed-claws.desktop.in.in
+++ b/exo-helper/helpers/sylpheed-claws.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=true
 X-XFCE-Binaries=claws-mail;sylpheed-claws-gtk2;sylpheed-claws
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=@libexecdir@/exo-compose-mail-1 sylpheed %B "mailto:%s";
+X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-1 sylpheed %B "mailto:%s";
