Make ExoLazyCellRenderer available, suggested in bug #1266 in 2005.
This new ExoLazyCellRenderer interface adds a new method
render_and_resize() to cell renderers implementing this interface. This
can be used for applications which load icons only on-demand (like
Thunar).

It allows cell renderers to modify the size of the rendered cells before
rendering them and pass the modifications back to the icon view.

This implementation still has a few resizing issues but maybe we can
sort them out one day...

The original code was written by Benny, I've modified the patch to apply
against the current development branch.

--- a/exo/Makefile.am
+++ b/exo/Makefile.am
@@ -21,6 +21,7 @@ libexo_headers =							\
 	exo-icon-bar.h							\
 	exo-icon-chooser-dialog.h					\
 	exo-icon-view.h							\
+	exo-lazy-cell-renderer.h					\
 	exo-job.h							\
 	exo-simple-job.h						\
 	exo-string.h							\
@@ -68,6 +69,7 @@ libexo_1_la_SOURCES =							\
 	exo-icon-chooser-model.c					\
 	exo-icon-chooser-model.h					\
 	exo-icon-view.c							\
+	exo-lazy-cell-renderer.c					\
 	exo-job.c							\
 	exo-job.h							\
 	exo-simple-job.c						\
