--- a/exo-helper/helpers/mozilla-mailer.desktop.in.in
+++ b/exo-helper/helpers/mozilla-mailer.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=mozilla;mozilla-gtk2;mozilla-gtk;
 X-XFCE-Category=MailReader
 X-XFCE-Commands=%B -mail;
-X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-1 mozilla-remote %B "mailto:%s";@libexecdir@/exo-compose-mail-1 mozilla %B "mailto:%s";
+X-XFCE-CommandsWithParameter=@HELPERDIR@/exo-compose-mail-1 mozilla-remote %B "mailto:%s";@HELPERDIR@/exo-compose-mail-1 mozilla %B "mailto:%s";
