--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -55,6 +55,7 @@ exo-helper/helpers/evolution.desktop.in.in
 exo-helper/helpers/firefox.desktop.in.in
 exo-helper/helpers/galeon.desktop.in.in
 exo-helper/helpers/gnome-terminal.desktop.in.in
+exo-helper/helpers/icedove.desktop.in.in
 exo-helper/helpers/kmail.desktop.in.in
 exo-helper/helpers/konqueror.desktop.in.in
 exo-helper/helpers/links.desktop.in.in
