--- a/exo-open/exo-web-browser.desktop.in
+++ b/exo-open/exo-web-browser.desktop.in
@@ -7,6 +7,7 @@ StartupNotify=false
 Terminal=false
 Categories=X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
+MimeType=x-scheme-handler/http;x-scheme-handler/https;
 _Name=Web Browser
 _Comment=Browse the web
 
