--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -1,11 +1,12 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Exec=exo-open --launch MailReader
+Exec=exo-open --launch MailReader %u
 Icon=internet-mail
 StartupNotify=false
 Terminal=false
 Categories=X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
+MimeType=x-scheme-handler/mailto;
 _Name=Mail Reader
 _Comment=Read your email
