Don't build the GIO module after glib 2.27 (bug #6800).

--- a/exo-gio-module/Makefile.am
+++ b/exo-gio-module/Makefile.am
@@ -8,7 +8,7 @@ INCLUDES = 								\
 
 if HAVE_GIO_UNIX
 
-if HAVE_GIO_MODULEDIR
+if BUILD_GIO_MODULE
 exomoduledir =								\
 	$(GIOMODULEDIR)
 else
