--- a/configure.in.in
+++ b/configure.in.in
@@ -150,25 +150,30 @@ XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.14.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.2.2])
 
-dnl *************************************
-dnl *** Check for GIO-Unix (optional) ***
-dnl *************************************
+dnl ***********************************************************
+dnl *** Check if we need to build the GIO module (optional) ***
+dnl ***********************************************************
 XDT_CHECK_OPTIONAL_PACKAGE([GIO_UNIX], [gio-unix-2.0], [2.18.0], [gio-unix], [GIO-Unix features], [yes])
 GIOMODULEDIR=""
 if test x"$GIO_UNIX_FOUND" = x"yes"; then
-  dnl GIO directory for extensions
-  AC_ARG_WITH([gio-module-dir],
-              [AC_HELP_STRING([--with-gio-module-dir=PATH],
-                              [Specify where to install the exo gio module (default=autodetect)])],
-              [gio_module_dir="$withval"])
-  if test x"$gio_module_dir" = x""; then
-    GIOMODULEDIR="`$PKG_CONFIG gio-2.0 --variable giomoduledir`"
-  elif test x"$gio_module_dir" != x"distcheck"; then
-    GIOMODULEDIR="$gio_module_dir"
+  dnl Do not build the module after GIO 2.27
+  XDT_CHECK_OPTIONAL_PACKAGE([GIO_UNIX_227], [gio-unix-2.0], [2.27.0], [gio-unix], [GIO-Unix too new], [yes])
+
+  if test x"$GIO_UNIX_227_FOUND" != x"yes"; then
+    dnl GIO directory for extensions
+    AC_ARG_WITH([gio-module-dir],
+                [AC_HELP_STRING([--with-gio-module-dir=PATH],
+                                [Specify where to install the exo gio module (default=autodetect)])],
+                [gio_module_dir="$withval"])
+    if test x"$gio_module_dir" = x""; then
+      GIOMODULEDIR="`$PKG_CONFIG gio-2.0 --variable giomoduledir`"
+    elif test x"$gio_module_dir" != x"distcheck"; then
+      GIOMODULEDIR="$gio_module_dir"
+    fi
   fi
 fi
 AC_SUBST([GIOMODULEDIR])
-AM_CONDITIONAL([HAVE_GIO_MODULEDIR], [test x"$GIOMODULEDIR" != x""])
+AM_CONDITIONAL([BUILD_GIO_MODULE], [test x"$GIOMODULEDIR" != x""])
 
 dnl *********************
 dnl *** Check for X11 ***
@@ -350,11 +355,13 @@ dnl ***************************
 echo
 echo "Build Configuration:"
 echo
-if test x"$GIO_UNIX_FOUND" = x"yes"; then
-echo "* GIO-Unix features:    yes"
+if test x"$GIO_UNIX_227_FOUND" = x"yes"; then
+echo "* Build GIO module:     no (not needed after glib 2.27)"
+elif test x"$GIO_UNIX_FOUND" = x"yes"; then
+echo "* Build GIO module:     yes"
 echo "  - GIO Module Dir:     $GIOMODULEDIR"
 else
-echo "* GIO-Unix features:    no"
+echo "* Build GIO module:     no"
 fi
 echo "* Debug Support:        $enable_debug"
 if test x"$enable_gen_doc" = x"yes"; then
