--- a/configure.in.in
+++ b/configure.in.in
@@ -15,11 +15,11 @@ m4_define([libexo_version_minor], [5])
 m4_define([libexo_version_micro], [5])
 m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [@REVISION@])
-m4_define([libexo_version_tag], [])
+m4_define([libexo_version_tag], [git])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [git], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
-dnl *** Full debug support for SVN snapshots ***
+dnl *** Full debug support for GIT snapshots ***
 dnl ********************************************
 m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [git], [full], [minimum])])
 
