Add main category to exo-open desktop files.

--- a/exo-open/exo-file-manager.desktop.in
+++ b/exo-open/exo-file-manager.desktop.in
@@ -5,7 +5,7 @@ Exec=exo-open --launch FileManager %u
 Icon=system-file-manager
 StartupNotify=true
 Terminal=false
-Categories=X-XFCE;X-Xfce-Toplevel;
+Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 MimeType=x-scheme-handler/file;x-scheme-handler/trash;
 _Name=File Manager
