--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -5,7 +5,7 @@ Exec=exo-open --launch MailReader %u
 Icon=internet-mail
 StartupNotify=false
 Terminal=false
-Categories=X-XFCE;X-Xfce-Toplevel;
+Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 MimeType=x-scheme-handler/mailto;
 _Name=Mail Reader
