--- a/exo-open/exo-terminal-emulator.desktop.in
+++ b/exo-open/exo-terminal-emulator.desktop.in
@@ -5,7 +5,7 @@ Exec=exo-open --launch TerminalEmulator
 Icon=utilities-terminal
 StartupNotify=false
 Terminal=false
-Categories=X-XFCE;X-Xfce-Toplevel;
+Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 _Name=Terminal Emulator
 _Comment=Use the command line
