--- a/exo-open/exo-web-browser.desktop.in
+++ b/exo-open/exo-web-browser.desktop.in
@@ -5,7 +5,7 @@ Exec=exo-open --launch WebBrowser %u
 Icon=web-browser
 StartupNotify=false
 Terminal=false
-Categories=X-XFCE;X-Xfce-Toplevel;
+Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
 MimeType=x-scheme-handler/http;x-scheme-handler/https;
 _Name=Web Browser
