--- a/exo-helper/helpers/Makefile.am
+++ b/exo-helper/helpers/Makefile.am
@@ -41,10 +41,10 @@ desktop_in_in_files =							\
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 %.desktop.in: %.desktop.in.in
-	sed -e 's,\@HELPERDIR\@,$(libdir)/xfce4/exo-$(LIBEXO_VERSION_API),g' < $< > $@
+	sed -e 's,\@HELPERDIR\@,$(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API),g' < $< > $@
 @INTLTOOL_DESKTOP_RULE@
 
-exo_composedir = $(libdir)/xfce4/exo-$(LIBEXO_VERSION_API)
+exo_composedir = $(HELPER_PATH_PREFIX)/xfce4/exo-$(LIBEXO_VERSION_API)
 exo_compose_SCRIPTS =							\
 	exo-compose-mail-$(LIBEXO_VERSION_API)
 
