Only compile demo application in make check (bug #7267).
noinst application are always compiled and since nobody needs
those applications, it is better to save them the compilation time.

(cherry picked from commit ac27ea69836dac9904bf8c0c9f02e5aaf3e3b13a)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,7 +14,9 @@ TESTS =									\
 check_PROGRAMS =							\
 	test-exo-csource						\
 	test-exo-noop							\
-	test-exo-string
+	test-exo-string							\
+	test-exo-icon-chooser-dialog					\
+	test-exo-wrap-table
 
 test_exo_csource_SOURCES =						\
 	test-exo-csource.c						\
@@ -51,10 +53,6 @@ test_exo_string_DEPENDENCIES =						\
 
 test_exo_string_LDADD =							\
 	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_API).la
-
-noinst_PROGRAMS =							\
-	test-exo-icon-chooser-dialog					\
-	test-exo-wrap-table
 
 test_exo_icon_chooser_dialog_SOURCES =					\
 	test-exo-icon-chooser-dialog.c
