--- a/configure.in.in
+++ b/configure.in.in
@@ -334,8 +334,10 @@ Makefile
 docs/Makefile
 docs/manual/Makefile
 docs/manual/images/Makefile
+docs/manual/images/el/Makefile
 docs/manual/images/es/Makefile
 docs/manual/images/ja/Makefile
+docs/manual/images/sv/Makefile
 docs/manual/po/Makefile
 docs/reference/Makefile
 docs/reference/version.xml
