Add missing linker flag.
(cherry picked from commit 85a37877ccc870cc64e1e98734fe5d8d2e9eb677)

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -56,7 +56,8 @@ INCLUDES =	 							\
 	$(GTK_DOC_EXTRA_CFLAGS)
 
 GTKDOC_LIBS =  								\
-	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_API).la
+	$(top_builddir)/exo/libexo-$(LIBEXO_VERSION_API).la \
+	$(GTK_LIBS)
 
 include $(top_srcdir)/gtk-doc.make
 
