--- a/docs/manual/Makefile.am
+++ b/docs/manual/Makefile.am
@@ -20,7 +20,7 @@ install-data-local:
 			done; \
 			if test x"$$lang" != x"C" -a ! -d $(srcdir)/images/$$lang; then \
 				echo "--- Creating symlink to C images for $$lang"; \
-				ln -sf $(docdir)/html/C/images $$dest/images; \
+				ln -sf ../C/images $$dest/images; \
 			fi \
 		fi \
 	done;
