--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -7,5 +7,6 @@ StartupNotify=false
 Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
+X-XFCE-MimeType=x-scheme-handler/mailto;
 _Name=Mail Reader
 _Comment=Read your email
