--- a/exo-open/exo-web-browser.desktop.in
+++ b/exo-open/exo-web-browser.desktop.in
@@ -7,6 +7,6 @@ StartupNotify=false
 Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
+X-XFCE-MimeType=x-scheme-handler/http;x-scheme-handler/https;
 _Name=Web Browser
 _Comment=Browse the web
-
