--- a/configure.in.in
+++ b/configure.in.in
@@ -157,6 +157,7 @@ XDT_CHECK_PACKAGE([GIO], [gio-2.0], [2.18.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.14.0])
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.16.0])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.8.0])
+XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-1], [4.8.0])
 
 dnl ***********************************************************
 dnl *** Check if we need to build the GIO module (optional) ***
@@ -351,7 +352,6 @@ exo-gio-module/Makefile
 exo-helper/Makefile
 exo-helper/helpers/Makefile
 exo-open/Makefile
-exo-support/Makefile
 icons/Makefile
 icons/24x24/Makefile
 icons/48x48/Makefile
