Use new libtool macros and versions (bug #6920).

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,8 +12,9 @@ SUBDIRS =								\
 	tests
 
 AUTOMAKE_OPTIONS =							\
-	1.8								\
-	dist-bzip2
+	1.9								\
+	dist-bzip2							\
+	no-dist-gzip
 
 distclean-local:
 	rm -rf *.spec *.cache *~
