--- a/configure.in.in
+++ b/configure.in.in
@@ -29,7 +29,7 @@ dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
 Copyright (c) 2004-2011 Xfce Development Team])
 AC_INIT([exo], [libexo_version], [http://bugzilla.xfce.org/])
-AC_PREREQ([2.50])
+AC_PREREQ([2.60])
 AC_REVISION([@REVISION@])
 AC_CANONICAL_TARGET()
 
@@ -91,6 +91,12 @@ esac
 AC_MSG_RESULT([$ac_bm_platform_win32])
 AM_CONDITIONAL([PLATFORM_WIN32], [test x"$ac_bm_platform_win32" = x"yes"])
 
+dnl **************************
+dnl *** Initialize libtool ***
+dnl **************************
+LT_PREREQ([2.2.6])
+LT_INIT([disable-static])
+
 dnl ********************************
 dnl *** Check for basic programs ***
 dnl ********************************
@@ -99,7 +105,6 @@ AC_PROG_CC()
 AM_PROG_CC_C_O()
 AC_PROG_INSTALL()
 AC_PROG_INTLTOOL([0.31], [no-xml])
-AC_PROG_LIBTOOL()
 AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl ***************************************
