Remove package manuals and link to online documentation.

--- a/exo-helper/exo-preferred-applications.desktop.in
+++ b/exo-helper/exo-preferred-applications.desktop.in
@@ -10,4 +10,5 @@ StartupNotify=true
 _Name=Preferred Applications
 _Comment=Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)
 X-XfcePluggable=true
-X-XfceHelpFile=exo-preferred-applications.html
+X-XfceHelpComponent=exo
+X-XfceHelpPage=preferred-applications
