--- a/exo-helper/exo-preferred-applications.desktop.in
+++ b/exo-helper/exo-preferred-applications.desktop.in
@@ -3,7 +3,7 @@ Version=1.0
 Exec=exo-preferred-applications
 Icon=preferences-desktop-default-applications
 Type=Application
-Categories=X-XFCE;Settings;DesktopSettings;X-XfceSettingsDialog;
+Categories=XFCE;GTK;Settings;DesktopSettings;X-XFCE-SettingsDialog;X-XFCE-PersonalSettings;
 OnlyShowIn=XFCE;
 Terminal=false
 StartupNotify=true
