Updates for release.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -46,6 +46,7 @@ exo-helper/helpers/Terminal.desktop.in.in
 exo-helper/helpers/Thunar.desktop.in.in
 exo-helper/helpers/aterm.desktop.in.in
 exo-helper/helpers/balsa.desktop.in.in
+exo-helper/helpers/chromium.desktop.in.in
 exo-helper/helpers/debian-sensible-browser.desktop.in.in
 exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in
 exo-helper/helpers/encompass.desktop.in.in
