Enable startup-notify in the exo-open desktop files.

--- a/exo-open/exo-mail-reader.desktop.in
+++ b/exo-open/exo-mail-reader.desktop.in
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Exec=exo-open --launch MailReader %u
 Icon=internet-mail
-StartupNotify=false
+StartupNotify=true
 Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
