--- a/exo-open/exo-terminal-emulator.desktop.in
+++ b/exo-open/exo-terminal-emulator.desktop.in
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Exec=exo-open --launch TerminalEmulator
 Icon=utilities-terminal
-StartupNotify=false
+StartupNotify=true
 Terminal=false
 Categories=Utility;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
