--- a/exo-open/exo-web-browser.desktop.in
+++ b/exo-open/exo-web-browser.desktop.in
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Exec=exo-open --launch WebBrowser %u
 Icon=web-browser
-StartupNotify=false
+StartupNotify=true
 Terminal=false
 Categories=Network;X-XFCE;X-Xfce-Toplevel;
 OnlyShowIn=XFCE;
