--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,6 @@ SUBDIRS =								\
 	exo								\
 	exo-csource							\
 	exo-desktop-item-edit						\
-	exo-gio-module							\
 	exo-helper							\
 	exo-open							\
 	docs								\
@@ -52,8 +51,6 @@ DISTCLEANFILES =							\
 	intltool-update
 
 DISTCHECK_CONFIGURE_FLAGS =						\
-	--enable-gtk-doc						\
-	--enable-gen-doc						\
-	--with-gio-module-dir=distcheck
+	--enable-gtk-doc
 
 # vi:set ts=8 sw=8 noet ai nocindent:
