--- a/configure.ac.in
+++ b/configure.ac.in
@@ -11,11 +11,11 @@ dnl ***************************
 m4_define([libexo_verinfo], [1:0:1])
 m4_define([libexo_version_api], [1])
 m4_define([libexo_version_major], [0])
-m4_define([libexo_version_minor], [9])
-m4_define([libexo_version_micro], [1])
+m4_define([libexo_version_minor], [10])
+m4_define([libexo_version_micro], [0])
 m4_define([libexo_version_nano], [])
 m4_define([libexo_version_build], [@REVISION@])
-m4_define([libexo_version_tag], [git])
+m4_define([libexo_version_tag], [])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [git], [libexo_version_tag()-libexo_version_build()], [libexo_version_tag()])])
 
 dnl ********************************************
@@ -27,7 +27,7 @@ dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
-Copyright (c) 2004-2011 Xfce Development Team])
+Copyright (c) 2004-2012 Xfce Development Team])
 AC_INIT([exo], [libexo_version], [http://bugzilla.xfce.org/])
 AC_PREREQ([2.60])
 AC_REVISION([@REVISION@])
