--- a/exo-helper/helpers/xfce4-terminal.desktop.in.in
+++ b/exo-helper/helpers/xfce4-terminal.desktop.in.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0
-Icon=Terminal
+Icon=utility-terminal
 Type=X-XFCE-Helper
 _Name=Xfce Terminal
 StartupNotify=true
-X-XFCE-Binaries=Terminal;xterminal;xfce4-terminal;
+X-XFCE-Binaries=xfce4-terminal;Terminal;xterminal;
 X-XFCE-Category=TerminalEmulator
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=%B -x %s;
