--- a/exo-helper/helpers/chromium.desktop.in.in
+++ b/exo-helper/helpers/chromium.desktop.in.in
@@ -5,7 +5,7 @@ Icon=chromium
 Type=X-XFCE-Helper
 _Name=Chromium
 StartupNotify=true
-X-XFCE-Binaries=chromium;google-chrome;
+X-XFCE-Binaries=chromium;google-chrome;chromium-browser;
 X-XFCE-Category=WebBrowser
 X-XFCE-Commands=%B;
 X-XFCE-CommandsWithParameter=%B "%s";
