Add various helpers.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,12 +42,14 @@ exo-helper/exo-helper-utils.c
 exo-helper/exo-helper.c
 exo-helper/exo-preferred-applications.desktop.in
 exo-helper/main.c
-exo-helper/helpers/Thunar.desktop.in.in
+
 exo-helper/helpers/aterm.desktop.in.in
 exo-helper/helpers/balsa.desktop.in.in
+exo-helper/helpers/caja.desktop.in.in
 exo-helper/helpers/chromium.desktop.in.in
 exo-helper/helpers/debian-sensible-browser.desktop.in.in
 exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in
+exo-helper/helpers/dillo.desktop.in.in
 exo-helper/helpers/encompass.desktop.in.in
 exo-helper/helpers/epiphany.desktop.in.in
 exo-helper/helpers/eterm.desktop.in.in
@@ -55,8 +57,10 @@ exo-helper/helpers/evolution.desktop.in.in
 exo-helper/helpers/firefox.desktop.in.in
 exo-helper/helpers/galeon.desktop.in.in
 exo-helper/helpers/gnome-terminal.desktop.in.in
+exo-helper/helpers/icecat.desktop.in.in
 exo-helper/helpers/icedove.desktop.in.in
 exo-helper/helpers/iceweasel.desktop.in.in
+exo-helper/helpers/jumanji.desktop.in.in
 exo-helper/helpers/kmail.desktop.in.in
 exo-helper/helpers/konqueror.desktop.in.in
 exo-helper/helpers/links.desktop.in.in
@@ -71,12 +75,17 @@ exo-helper/helpers/nxterm.desktop.in.in
 exo-helper/helpers/opera-browser.desktop.in.in
 exo-helper/helpers/opera-mailer.desktop.in.in
 exo-helper/helpers/pcmanfm.desktop.in.in
-exo-helper/helpers/sylpheed-claws.desktop.in.in
+exo-helper/helpers/rodent.desktop.in.in
+exo-helper/helpers/rox-filer.desktop.in.in
+exo-helper/helpers/sakura.desktop.in.in
 exo-helper/helpers/sylpheed.desktop.in.in
+exo-helper/helpers/sylpheed-claws.desktop.in.in
+exo-helper/helpers/Thunar.desktop.in.in
 exo-helper/helpers/thunderbird.desktop.in.in
 exo-helper/helpers/urxvt.desktop.in.in
 exo-helper/helpers/w3m.desktop.in.in
 exo-helper/helpers/xfce4-terminal.desktop.in.in
+exo-helper/helpers/xfe.desktop.in.in
 exo-helper/helpers/xterm.desktop.in.in
 
 exo-open/main.c
