--- a/exo-helper/helpers/xfce4-terminal.desktop.in.in
+++ b/exo-helper/helpers/xfce4-terminal.desktop.in.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Version=1.0
-Icon=utility-terminal
+Icon=utilities-terminal
 Type=X-XFCE-Helper
 _Name=Xfce Terminal
 StartupNotify=true
