--- a/configure.ac.in
+++ b/configure.ac.in
@@ -23,6 +23,11 @@ dnl *** Full debug support for GIT snapshots ***
 dnl ********************************************
 m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [git], [full], [minimum])])
 
+dnl ****************************
+dnl *** For intltool support ***
+dnl ****************************
+m4_define([intltool_minimum_version], [0.35])
+
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
@@ -104,7 +109,7 @@ AM_PROG_AS()
 AC_PROG_CC()
 AM_PROG_CC_C_O()
 AC_PROG_INSTALL()
-AC_PROG_INTLTOOL([0.31], [no-xml])
+IT_PROG_INTLTOOL([intltool_minimum_version], [no-xml])
 AC_CHECK_PROGS([PERL], [perl5 perl])
 
 dnl ***************************************
