Install category icons into categories folder (bug 11364)

--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -1,11 +1,15 @@
 
-iconsdir = $(datadir)/icons/hicolor/48x48/apps
-icons_DATA =								\
-	applications-internet.png					\
-	applications-other.png						\
+appicondir = $(datadir)/icons/hicolor/48x48/apps
+appicon_DATA =								\
 	preferences-desktop-default-applications.png
 
+categoryicondir = $(datadir)/icons/hicolor/48x48/categories
+categoryicon_DATA =								\
+	applications-internet.png					\
+	applications-other.png
+
 EXTRA_DIST =								\
-	$(icons_DATA)
+	$(appicon_DATA)								\
+	$(categoryicon_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent:
