--- a/exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in
+++ b/exo-helper/helpers/debian-x-terminal-emulator.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=x-terminal-emulator;
 X-XFCE-Category=TerminalEmulator
 X-XFCE-Commands=%B;
-X-XFCE-CommandsWithParameter=%B -e %s;
+X-XFCE-CommandsWithParameter=%B -e "%s";
