--- a/exo-helper/helpers/firefox.desktop.in.in
+++ b/exo-helper/helpers/firefox.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=firefox;firefox-gtk2;firefox-gtk;mozilla-firefox;
 X-XFCE-Category=WebBrowser
 X-XFCE-Commands=%B -remote "openURL(about:blank,new-window)";%B;
-X-XFCE-CommandsWithParameter=%B -remote "openURL(%s)";%B %s;
+X-XFCE-CommandsWithParameter=%B -remote "openURL(%s)";%B "%s";
