--- a/exo-helper/helpers/lynx.desktop.in.in
+++ b/exo-helper/helpers/lynx.desktop.in.in
@@ -7,4 +7,4 @@ StartupNotify=false
 X-XFCE-Binaries=lynx;lynx-current;
 X-XFCE-Category=WebBrowser
 X-XFCE-Commands=exo-open --launch TerminalEmulator %B;
-X-XFCE-CommandsWithParameter=exo-open --launch TerminalEmulator %B %s;
+X-XFCE-CommandsWithParameter=exo-open --launch TerminalEmulator %B "%s";
