Add helpers for qtFM, QTerminal, Qupzilla, Surf, Vimprobable2 (bug 10216)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -75,14 +75,19 @@ exo-helper/helpers/nxterm.desktop.in.in
 exo-helper/helpers/opera-browser.desktop.in.in
 exo-helper/helpers/opera-mailer.desktop.in.in
 exo-helper/helpers/pcmanfm.desktop.in.in
+exo-helper/helpers/qterminal.desktop.in.in
+exo-helper/helpers/qtfm.desktop.in.in
+exo-helper/helpers/qupzilla.desktop.in.in
 exo-helper/helpers/rodent.desktop.in.in
 exo-helper/helpers/rox-filer.desktop.in.in
 exo-helper/helpers/sakura.desktop.in.in
+exo-helper/helpers/surf.desktop.in.in
 exo-helper/helpers/sylpheed.desktop.in.in
 exo-helper/helpers/sylpheed-claws.desktop.in.in
 exo-helper/helpers/Thunar.desktop.in.in
 exo-helper/helpers/thunderbird.desktop.in.in
 exo-helper/helpers/urxvt.desktop.in.in
+exo-helper/helpers/vimprobable2.desktop.in.in
 exo-helper/helpers/w3m.desktop.in.in
 exo-helper/helpers/xfce4-terminal.desktop.in.in
 exo-helper/helpers/xfe.desktop.in.in
