--- a/configure.ac.in
+++ b/configure.ac.in
@@ -35,6 +35,7 @@ AC_COPYRIGHT([Copyright (c) 2004-2010 os-cillation.
 Copyright (c) 2004-2012 Xfce Development Team])
 AC_INIT([exo], [libexo_version], [http://bugzilla.xfce.org/])
 AC_PREREQ([2.60])
+AC_CONFIG_MACRO_DIR([m4])
 AC_REVISION([@REVISION@])
 AC_CANONICAL_TARGET()
 
