--- a/configure.ac.in
+++ b/configure.ac.in
@@ -201,7 +201,7 @@ if test x"$enable_visibility" != x"no"; then
   save_CFLAGS="$CFLAGS"
   CFLAGS="$CFLAGS -Wall -Werror"
   AC_MSG_CHECKING([whether $CC supports the GNUC visibility attribute])
-  AC_COMPILE_IFELSE(AC_LANG_SOURCE(
+  AC_COMPILE_IFELSE([AC_LANG_SOURCE(
   [
     void test_default (void);
     void test_hidden (void);
@@ -210,7 +210,7 @@ if test x"$enable_visibility" != x"no"; then
     void __attribute__ ((visibility("hidden"))) test_hidden (void) {}
 
     int main (int argc, char **argv) { test_default (); test_hidden (); return 0; }
-  ]),
+  ])],
   [
     have_gnuc_visibility=yes
     AC_MSG_RESULT([yes])
